--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "ethers": "^6.13.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
