--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "@nextui-org/react": "^2.4.2",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "ethers": "^6.13.0",
+    "framer-motion": "^11.2.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
